--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,10 @@ fastapi
 uvicorn
 pydantic
 python-dotenv
+langchain
+wikipedia
+langchain-community
+langchain-openai
+langchain-anthropic
+python-dotenv
+duckduckgo-search
